--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
   <style>
     html, body { height: 100%; }
-    #map { height: 100%; min-height: 480px; }
+    #map { height: 68vh; min-height: 420px; }
     .leaflet-popup-content { max-width: 320px; }
   </style>
 </head>
@@ -185,6 +185,10 @@
     // Marker cluster group for performance when many points
     const cluster = L.markerClusterGroup();
     map.addLayer(cluster);
+
+    // Ensure map sizes correctly after layout changes
+    window.addEventListener('load', () => setTimeout(() => map.invalidateSize(), 100));
+    window.addEventListener('resize', () => map.invalidateSize());
 
     // Datasets in memory
     let allFeatures = []; // everything currently on map
