--- a/index.html
+++ b/index.html
@@ -1,398 +1,10 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Climate Stories Map</title>
-  <meta name="description" content="Interactive map of climate stories with a simple submission form and easy data export." />
-  <!-- Tailwind CSS (CDN) -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Leaflet CSS/JS -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin=""
-  />
-  <script
-    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-    crossorigin=""
-  ></script>
-  <!-- Leaflet MarkerCluster (optional but nice when many dots) -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"
-  />
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css"
-  />
-  <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
-  <style>
-    html, body { height: 100%; }
-    #map { height: 68vh; min-height: 420px; }
-    .leaflet-popup-content { max-width: 320px; }
-  </style>
-</head>
-<body class="bg-slate-50">
-  <header class="sticky top-0 z-10 bg-white/80 backdrop-blur border-b border-slate-200">
-    <div class="max-w-7xl mx-auto px-4 py-3 flex items-center justify-between">
-      <h1 class="text-xl md:text-2xl font-semibold text-slate-900">Climate Stories Map</h1>
-      <nav class="text-sm text-slate-600 flex gap-4">
-        <a href="#map" class="hover:text-slate-900">Map</a>
-        <a href="#submit" class="hover:text-slate-900">Add your story</a>
-        <a href="#manage" class="hover:text-slate-900">Manage data</a>
-      </nav>
-    </div>
-  </header>
+---
+layout: default
+title: "Home"
+---
 
-  <main class="max-w-7xl mx-auto px-4 grid md:grid-cols-3 gap-4 md:gap-6 py-4 md:py-6">
-    <!-- Map -->
-    <section id="mapSection" class="relative $1">
-      <div class="absolute right-3 top-3 z-[1001] flex gap-2">
-        <button id="zoomAll" class="px-3 py-2 rounded-xl bg-slate-900 text-white hover:bg-slate-800 shadow">Zoom to all stories</button>
-      </div>
-      <div id="map" class="rounded-2xl"></div>
-    </section>
+Welcome! Explore stories on the **[Map]({{ '/map.html' | relative_url }})** or **[Submit a story]({{ '/submit.html' | relative_url }})** to add yours.
 
-    <!-- Submission form -->
-    <section id="submit" class="rounded-2xl shadow bg-white border border-slate-200 p-4 md:p-6">
-      <h2 class="text-lg font-semibold mb-3">Add your story</h2>
-      <p class="text-sm text-slate-600 mb-3">Click on the map to set a location (or paste coordinates), then fill in your story. Your story will appear immediately on the map <em>locally</em>. You (or a moderator) can export new entries as GeoJSON and add them to the main dataset.</p>
-
-      <form id="storyForm" class="space-y-3">
-        <div>
-          <label class="block text-sm font-medium text-slate-700">Name (optional)</label>
-          <input type="text" id="name" class="mt-1 w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500" placeholder="e.g., Alex" />
-        </div>
-        <div>
-          <label class="block text-sm font-medium text-slate-700">Title</label>
-          <input required type="text" id="title" class="mt-1 w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500" placeholder="e.g., Flooding in my town" />
-        </div>
-        <div>
-          <label class="block text-sm font-medium text-slate-700">Story</label>
-          <textarea required id="story" rows="5" class="mt-1 w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500" placeholder="What happened? How has climate affected you or your community?"></textarea>
-        </div>
-        <div class="grid grid-cols-2 gap-3">
-          <div>
-            <label class="block text-sm font-medium text-slate-700">Latitude</label>
-            <input type="number" step="any" id="lat" class="mt-1 w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500" placeholder="Click the map or paste" />
-          </div>
-          <div>
-            <label class="block text-sm font-medium text-slate-700">Longitude</label>
-            <input type="number" step="any" id="lng" class="mt-1 w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500" placeholder="Click the map or paste" />
-          </div>
-        </div>
-        <div class="grid grid-cols-2 gap-3">
-          <div>
-            <label class="block text-sm font-medium text-slate-700">Date (optional)</label>
-            <input type="date" id="date" class="mt-1 w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500" />
-          </div>
-          <div>
-            <label class="block text-sm font-medium text-slate-700">Link (optional)</label>
-            <input type="url" id="link" class="mt-1 w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500" placeholder="e.g., https://example.com" />
-          </div>
-        </div>
-        <div>
-          <label class="block text-sm font-medium text-slate-700">Year (optional)</label>
-          <input type="number" id="year" min="1800" step="1" class="mt-1 w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500" placeholder="e.g., 2024" />
-        </div>
-        <div class="flex items-center gap-3">
-          <button type="submit" class="px-4 py-2 rounded-xl bg-slate-900 text-white hover:bg-slate-800">Add to map</button>
-          <span id="formMsg" class="text-sm text-slate-600"></span>
-        </div>
-      </form>
-
-      <div class="mt-4 text-xs text-slate-500">
-        <p><strong>Tip:</strong> If you run this as a static site (GitHub Pages/Netlify/Vercel), keep your main dataset in <code>stories.geojson</code>. New submissions appear locally and can be exported for moderation.</p>
-      </div>
-    </section>
-
-    <!-- Data management -->
-    <section id="manage" class="md:col-span-3 rounded-2xl shadow bg-white border border-slate-200 p-4 md:p-6">
-      <h2 class="text-lg font-semibold mb-3">Manage data</h2>
-      <div class="grid md:grid-cols-2 gap-4">
-        <div class="space-y-2">
-          <h3 class="font-medium">Load existing data</h3>
-          <p class="text-sm text-slate-600">This app will try to load <code>stories.geojson</code> from the same folder. Or you can paste/upload GeoJSON below.</p>
-          <textarea id="geojsonInput" rows="6" class="w-full rounded-xl border-slate-300 focus:border-slate-500 focus:ring-slate-500" placeholder='{"type":"FeatureCollection","features":[...]}'></textarea>
-          <div class="flex items-center gap-2">
-            <button id="loadGeoJSON" class="px-3 py-2 rounded-xl bg-slate-900 text-white hover:bg-slate-800">Load GeoJSON</button>
-            <input type="file" id="fileInput" accept=".json,.geojson" class="text-sm" />
-          </div>
-        </div>
-        <div class="space-y-2">
-          <h3 class="font-medium">Export</h3>
-          <p class="text-sm text-slate-600">Download just the <em>new</em> entries (since page load) or the entire dataset now on the map.</p>
-          <div class="flex flex-wrap gap-2">
-            <button id="downloadNew" class="px-3 py-2 rounded-xl bg-emerald-600 text-white hover:bg-emerald-500">Download new entries (GeoJSON)</button>
-            <button id="downloadAll" class="px-3 py-2 rounded-xl bg-indigo-600 text-white hover:bg-indigo-500">Download all (GeoJSON)</button>
-            <button id="clearNew" class="px-3 py-2 rounded-xl bg-rose-600 text-white hover:bg-rose-500">Clear new entries</button>
-          </div>
-          <p id="exportMsg" class="text-sm text-slate-600"></p>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="text-center text-xs text-slate-500 py-8">
-    Built with <a class="underline" href="https://leafletjs.com/" target="_blank" rel="noreferrer noopener">Leaflet</a>. No tracking. Host anywhere.
-  </footer>
-
-  <!-- Optional: inline sample data (used if stories.geojson not found) -->
-  <script id="sample-data" type="application/json">
-  {
-    "type": "FeatureCollection",
-    "features": [
-      {
-        "type": "Feature",
-        "properties": {
-          "title": "The river that keeps rising",
-          "name": "Jo",
-          "story": "Each winter the path by the river floods earlier and takes longer to drain.",
-          "date": "2023-12-03",
-          "year": 2023,
-          "link": "https://example.org/story"
-        },
-        "geometry": { "type": "Point", "coordinates": [-3.1883, 55.9533] }
-      },
-      {
-        "type": "Feature",
-        "properties": {
-          "title": "Smoke over the valley",
-          "name": "Sam",
-          "story": "Wildfire smoke turned the sky orange for a week last summer.",
-          "date": "2024-08-18",
-          "year": 2024
-        },
-        "geometry": { "type": "Point", "coordinates": [-122.4194, 37.7749] }
-      }
-    ]
-  }
-  </script>
-
-  <script>
-    // --- Map init ---
-    const map = L.map('map', { scrollWheelZoom: true, minZoom: 1, worldCopyJump: true });
-    const osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OSM</a> contributors'
-    }).addTo(map);
-
-    // Start viewpoint
-    map.setView([0, 0], 1);
-
-    // Marker cluster group for performance when many points
-    const cluster = L.markerClusterGroup();
-    map.addLayer(cluster);
-
-    // Ensure map sizes correctly after layout changes
-    window.addEventListener('load', () => setTimeout(() => map.invalidateSize(), 100));
-    window.addEventListener('resize', () => map.invalidateSize());
-
-    // Datasets in memory
-    let allFeatures = []; // everything currently on map
-    let newFeatures = []; // just newly added this session
-
-    // Helpers
-    function featureToMarker(feature) {
-      const [lng, lat] = feature.geometry.coordinates;
-      const props = feature.properties || {};
-      const title = props.title || 'Untitled';
-      const name = props.name ? ` by <strong>${escapeHtml(props.name)}</strong>` : '';
-      const when = (props.date || props.year) ? `<div class=\"text-xs text-slate-500 mt-1\">${props.date ? escapeHtml(props.date) : ''}${props.date && props.year ? ' · ' : ''}${props.year ? escapeHtml(String(props.year)) : ''}</div>` : '';
-      const link = props.link ? `<div class="mt-2"><a class="underline" href="${escapeAttr(props.link)}" target="_blank" rel="noreferrer noopener">Learn more</a></div>` : '';
-      const story = props.story ? `<p class="mt-2">${linkify(escapeHtml(props.story))}</p>` : '';
-
-      const html = `<div class="max-w-[300px]"><h3 class="font-semibold text-slate-900">${escapeHtml(title)}</h3>${when}<div class="text-sm text-slate-700">${story}${name}${link}</div></div>`;
-      const marker = L.marker([lat, lng]);
-      marker.bindPopup(html);
-      return marker;
-    }
-
-    function addFeaturesToMap(features) {
-      features.forEach(f => {
-        const m = featureToMarker(f);
-        cluster.addLayer(m);
-      });
-    }
-
-    function toFeature({lat, lng, title, name, story, date, link, year}) {
-      const yearNum = (year !== undefined && year !== null && !Number.isNaN(Number(year))) ? Number(year) : undefined;
-      return {
-        type: 'Feature',
-        properties: { title, name, story, date, link, year: yearNum },
-        geometry: { type: 'Point', coordinates: [Number(lng), Number(lat)] }
-      };
-    };
-    }
-
-    function download(filename, content) {
-      const blob = new Blob([content], { type: 'application/json;charset=utf-8' });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url; a.download = filename; a.click();
-      setTimeout(() => URL.revokeObjectURL(url), 1000);
-    }
-
-    function escapeHtml(str) {
-      return (str || '').replace(/[&<>\"]/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[c]));
-    }
-    function escapeAttr(str) { return escapeHtml(str).replace(/'/g, '&#39;'); }
-    function linkify(text) {
-      // basic URL linkifier
-      const urlRegex = /(https?:\/\/[^\s]+)/g;
-      return text.replace(urlRegex, url => `<a class="underline" href="${escapeAttr(url)}" target="_blank" rel="noreferrer noopener">${escapeHtml(url)}</a>`);
-    }
-
-    async function tryLoadExternalGeoJSON() {
-      try {
-        const res = await fetch('stories.geojson', { cache: 'no-store' });
-        if (!res.ok) throw new Error('Not found');
-        const gj = await res.json();
-        return gj;
-      } catch (e) {
-        return null;
-      }
-    }
-
-    function loadSampleGeoJSON() {
-      const text = document.getElementById('sample-data').textContent;
-      return JSON.parse(text);
-    }
-
-    function refreshMapBounds() {
-      const bounds = cluster.getBounds();
-      if (bounds.isValid()) {
-        map.fitBounds(bounds.pad(0.15));
-      }
-    }
-
-    // Initial load
-    (async function init() {
-      const external = await tryLoadExternalGeoJSON();
-      const data = external || loadSampleGeoJSON();
-      if (data && Array.isArray(data.features)) {
-        allFeatures = data.features.slice();
-        addFeaturesToMap(allFeatures);
-        // start world view by default (no auto-fit)
-      }
-    })();
-
-    // --- Click to set lat/lng ---
-
-    // --- Zoom-to-all button (guard if button missing) ---
-    (function(){
-      const zoomBtn = document.getElementById('zoomAll');
-      if (zoomBtn) zoomBtn.addEventListener('click', refreshMapBounds);
-    })();
-    map.on('click', (e) => {
-      const { lat, lng } = e.latlng;
-      document.getElementById('lat').value = lat.toFixed(6);
-      document.getElementById('lng').value = lng.toFixed(6);
-    });
-
-    // --- Form handling ---
-    const form = document.getElementById('storyForm');
-    const formMsg = document.getElementById('formMsg');
-    const yearInput = document.getElementById('year');
-    const dateInput = document.getElementById('date');
-    if (yearInput) {
-      yearInput.setAttribute('max', String(new Date().getFullYear()));
-    }
-    if (dateInput && yearInput) {
-      dateInput.addEventListener('change', (e) => {
-        const v = e.target.value;
-        if (v && !yearInput.value) {
-          yearInput.value = v.slice(0,4);
-        }
-      });
-    }
-
-    form.addEventListener('submit', (e) => {
-      e.preventDefault();
-      const title = document.getElementById('title').value.trim();
-      const name = document.getElementById('name').value.trim();
-      const story = document.getElementById('story').value.trim();
-      const lat = parseFloat(document.getElementById('lat').value);
-      const lng = parseFloat(document.getElementById('lng').value);
-      const date = document.getElementById('date').value || undefined;
-      const link = document.getElementById('link').value.trim() || undefined;
-      const yearVal = parseInt(document.getElementById('year').value, 10);
-      const year = Number.isNaN(yearVal) ? undefined : yearVal;
-
-      if (!title || !story || Number.isNaN(lat) || Number.isNaN(lng)) {
-        formMsg.textContent = 'Please set a location (click the map) and complete required fields.';
-        formMsg.className = 'text-sm text-rose-600';
-        return;
-      }
-
-      const feature = toFeature({lat, lng, title, name, story, date, link, year});
-      allFeatures.push(feature);
-      newFeatures.push(feature);
-      addFeaturesToMap([feature]);
-      refreshMapBounds();
-
-      form.reset();
-      formMsg.textContent = 'Added locally ✓ (remember to export new entries)';
-      formMsg.className = 'text-sm text-emerald-700';
-    });
-
-    // --- Load pasted/uploaded GeoJSON ---
-    document.getElementById('loadGeoJSON').addEventListener('click', () => {
-      try {
-        const text = document.getElementById('geojsonInput').value.trim();
-        if (!text) return;
-        const gj = JSON.parse(text);
-        if (gj.type !== 'FeatureCollection' || !Array.isArray(gj.features)) throw new Error('Invalid GeoJSON');
-        // Clear existing layers
-        cluster.clearLayers();
-        allFeatures = gj.features.slice();
-        addFeaturesToMap(allFeatures);
-        refreshMapBounds();
-        document.getElementById('exportMsg').textContent = 'Loaded pasted GeoJSON.';
-      } catch (err) {
-        document.getElementById('exportMsg').textContent = 'Error: ' + err.message;
-      }
-    });
-
-    document.getElementById('fileInput').addEventListener('change', (e) => {
-      const file = e.target.files[0];
-      if (!file) return;
-      const reader = new FileReader();
-      reader.onload = () => {
-        try {
-          const gj = JSON.parse(reader.result);
-          if (gj.type !== 'FeatureCollection' || !Array.isArray(gj.features)) throw new Error('Invalid GeoJSON');
-          cluster.clearLayers();
-          allFeatures = gj.features.slice();
-          addFeaturesToMap(allFeatures);
-          refreshMapBounds();
-          document.getElementById('exportMsg').textContent = 'Loaded file: ' + file.name;
-        } catch (err) {
-          document.getElementById('exportMsg').textContent = 'Error: ' + err.message;
-        }
-      };
-      reader.readAsText(file);
-    });
-
-    // --- Export buttons ---
-    document.getElementById('downloadNew').addEventListener('click', () => {
-      const fc = { type: 'FeatureCollection', features: newFeatures };
-      download('new-stories.geojson', JSON.stringify(fc, null, 2));
-      document.getElementById('exportMsg').textContent = newFeatures.length ? `Downloaded ${newFeatures.length} new entr${newFeatures.length===1?'y':'ies'}.` : 'No new entries this session.';
-    });
-
-    document.getElementById('downloadAll').addEventListener('click', () => {
-      const fc = { type: 'FeatureCollection', features: allFeatures };
-      download('stories.geojson', JSON.stringify(fc, null, 2));
-      document.getElementById('exportMsg').textContent = `Downloaded full dataset (${allFeatures.length} features).`;
-    });
-
-    document.getElementById('clearNew').addEventListener('click', () => {
-      newFeatures = [];
-      document.getElementById('exportMsg').textContent = 'Cleared new entries buffer.';
-    });
-  </script>
-</body>
-</html>
+<div class="notice">
+<p><strong>How it works:</strong> When someone submits a story, we receive it in Google Forms. If approved, we add it to the public map.</p>
+</div>
